keep the semantics but change the implementation